[package]
name = "central_node"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "central_node"
test = false
doctest = false
bench = false

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  # "println",
  "defmt",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3"] }
esp-wifi = { version = "0.11.0", default-features = false, features = [
  "esp-alloc",
  "esp-now",
  "esp32c3",
] }
esp32c3 = { version = "0.26.0", features = ["critical-section"] }
fugit = "0.3.7"
mipidsi = "0.9.0"
num = { version = "0.4.3", default-features = false }
rtic = { version = "2.1.2", features = ["esp32c3", "riscv-esp32c3-backend"] }
rtic-monotonics = { version = "2.0.3", git = "https://github.com/rtic-rs/rtic/", features = [
  "esp32c3-systimer",
] }
static_cell = "2.1.0"
u8g2-fonts = "0.5.1"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
